# -home_credit_model

./: .gitignore  README.md  app.py  client_testing_env.py  cv_results.json  eda.ipynb  pyproject.toml
artifacts/: feature_types.json  organization_feature_json.json  threshold.json
aux_files/: organization_feature_json.json
models/: threshold.json
src/: exploration_funcs.py  extract_load_data.py  feature_engineering.py  model_functions.py  model_training.py
