[tool.poetry]
name = "home-credit-model"
version = "0.1.0"
description = ""
authors = ["Artur Tiburski Vaz Costa <artur_vazcosta@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
google-cloud-bigquery = "3.14.1"
google-cloud-bigquery-storage = "2.24.0"
xgboost = "^2.1.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
pandas-gbq = "0.20.0"
lightgbm = "^4.5.0"
scikit-optimize = "^0.10.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
scipy = "^1.14.0"
numpy = "^2.1.0"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
